--- a/src/components/TopUp/TopUp.module.scss
+++ b/src/components/TopUp/TopUp.module.scss
@@ -133,6 +133,10 @@
   transition: 0.3s;
 }
 
+optgroup{
+  color: #000;
+}
+
 @media screen and (max-width: 62rem) {
   .topup-block {
     max-width: 100%;
